(client): Changes column resize logic using HostListener, fixes some responsive issues on mobile

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -120,9 +120,14 @@ mat-grid-tile:hover {
     color: white;
   }
 
+  .main-content-text {
+    font-size: 15px;
+    color: white;
+  }
+
   #main-content-text-big {
-    margin-top: 10px;
-    font-size: 40px;
+    margin-top: 0;
+    font-size: 25px;
   }
 }
 
